@@ -24,6 +24,7 @@ Version 1.13.10+dev:
    * Miscellaneous low-level optimizations in game rendering code, improving
      performance ingame by up to 50 %.
  * Miscellaneous and bug fixes:
+   * Fixed crash after canceling add-on download (bug #2203)
    * Fixed ingame help showing units you haven't encountered (bug #2135)
    * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
      (bug #2196)
